[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/BasicBlockFont24.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/UI/Themes/RetmisTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Fonts/BasicBlockFont48.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Fonts/BasicBlockFont14.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/UI/GameOver/GameWin.gd" type="Script" id=5]

[node name="GameWin" type="Popup"]
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 2 )
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 0.901961 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -397.0
margin_top = -183.0
margin_right = 397.0
margin_bottom = 183.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 794.0
margin_bottom = 366.0
alignment = 1

[node name="WinLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 794.0
margin_bottom = 131.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.380392, 0.717647, 0.203922, 1 )
custom_fonts/font = ExtResource( 3 )
text = "You've won!"
align = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 794.0
margin_bottom = 345.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.61

[node name="EndScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 794.0
margin_bottom = 24.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "You scored: 0"
align = 1

[node name="HighScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 794.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( 397, 25 )
size_flags_vertical = 0
custom_colors/font_color = Color( 0.792157, 0.752941, 0.160784, 1 )
custom_fonts/font = ExtResource( 4 )
text = "[NEW HIGH SCORE]"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 349.0
margin_right = 794.0
margin_bottom = 365.0
alignment = 1

[node name="ToMenuButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 395.0
margin_bottom = 16.0
focus_neighbour_left = NodePath("../NewGameButton")
focus_neighbour_right = NodePath("../NewGameButton")
focus_next = NodePath("../NewGameButton")
focus_previous = NodePath("../NewGameButton")
size_flags_horizontal = 3
text = "Return to main menu"

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 399.0
margin_right = 794.0
margin_bottom = 16.0
focus_neighbour_left = NodePath("../ToMenuButton")
focus_neighbour_right = NodePath("../ToMenuButton")
focus_next = NodePath("../ToMenuButton")
focus_previous = NodePath("../ToMenuButton")
size_flags_horizontal = 3
text = "New Game"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ToMenuButton" to="." method="_on_ToMenuButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
